[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/world/player/Player.gd" type="Script" id=1]
[ext_resource path="res://themes/ui_theme.theme" type="Theme" id=2]
[ext_resource path="res://32-32_white.png" type="Texture" id=3]
[ext_resource path="res://src/world/player/Hint.gd" type="Script" id=4]
[ext_resource path="res://src/ui/components/Blur.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/HUD/BuildHUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/wav/open_ui.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/wav/close_ui.wav" type="AudioStream" id=8]
[ext_resource path="res://src/world/player/ItemHandler.gd" type="Script" id=9]
[ext_resource path="res://src/world/player/MineAudio.gd" type="Script" id=10]
[ext_resource path="res://audio/wav/mine.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="Animation" id=14]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float lod: hint_range(0, 5);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, lod).rgb;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/lod = 2.0

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.7, 0 ), Vector3( 0, 0.15, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.3 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, 0 ), Vector3( 0, 0.7, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.3, 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.27, -0.24682, -0.392674 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotationPivot/Camera/Hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "mine"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -75, 20, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "mine"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.27, -0.24682, -0.392674 ), Vector3( 0.27, -0.2, -0.393 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.7, 0 ), Vector3( 0, 0.15, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.3 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, 0 ), Vector3( 0, 0.7, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.3, 1.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.27, -0.24682, -0.392674 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotationPivot/Camera/Hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "mine"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -75, 20, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "mine"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot/Camera/Hand:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.27, -0.24682, -0.392674 ), Vector3( 0.27, -0.2, -0.393 ) ]
}

[node name="Player" type="KinematicBody" groups=[
"save",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.998371, 0 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RotationPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )

[node name="Camera" type="Camera" parent="RotationPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.224503, 0 )
current = true
far = 400.0

[node name="UseRay" type="RayCast" parent="RotationPivot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -3.5 )
collision_mask = 29

[node name="RayTip" type="Position3D" parent="RotationPivot/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.5 )

[node name="PlaceRay" type="RayCast" parent="RotationPivot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -4.5 )

[node name="Hand" type="Position3D" parent="RotationPivot/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27, -0.24682, -0.392674 )

[node name="FeetRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -2, 0 )
collision_mask = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.197876
margin_right = 0.197876
theme = ExtResource( 2 )

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.0
margin_bottom = 4.0
texture = ExtResource( 3 )
expand = true

[node name="Hint" type="PanelContainer" parent="CanvasLayer/HUD/Crosshair"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 10.6434
margin_top = -10.0522
margin_right = 50.6434
margin_bottom = 29.9478
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/Crosshair/Hint"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/Crosshair/Hint/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 32.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HUD/Crosshair/Hint"]
anims/fade_in = SubResource( 14 )
anims/fade_out = SubResource( 15 )

[node name="Blur" parent="CanvasLayer/HUD" instance=ExtResource( 5 )]
material = SubResource( 3 )
playback_speed = 4.0

[node name="BuildHUD" parent="CanvasLayer/HUD" instance=ExtResource( 6 )]
visible = false

[node name="Open" type="AudioStreamPlayer" parent="CanvasLayer/HUD"]
stream = ExtResource( 7 )

[node name="Close" type="AudioStreamPlayer" parent="CanvasLayer/HUD"]
stream = ExtResource( 8 )

[node name="MoveAnimation" type="AnimationPlayer" parent="."]
anims/crouch_down = SubResource( 4 )
anims/crouch_up = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/mine = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="MineAnimation" type="AnimationPlayer" parent="."]
anims/crouch_down = SubResource( 9 )
anims/crouch_up = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/mine = SubResource( 12 )
anims/walk = SubResource( 13 )

[node name="ItemHandler" type="Node" parent="."]
script = ExtResource( 9 )

[node name="MineAudio" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Stream00" type="AudioStreamPlayer" parent="MineAudio"]
stream = ExtResource( 11 )

[node name="Stream01" type="AudioStreamPlayer" parent="MineAudio"]
stream = ExtResource( 11 )

[node name="Stream02" type="AudioStreamPlayer" parent="MineAudio"]
stream = ExtResource( 11 )

[node name="Stream03" type="AudioStreamPlayer" parent="MineAudio"]
stream = ExtResource( 11 )
